2021-03-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.tcl: Apply patch for fromstr, version 1.0.4 (ticket d159e101f329682a232aabac36c0ef6640ff8484)
	* decimal.test: Added test for this ticket
	* primes.tcl: Added procedures for returning pairs and lists of primes (ticket 0ce5a9fc98f7c752d4dabc0911dccfb513686ad2)
	* primes.test: Added tests for the new procedures
	* numtheory.man: Description of the new procedures
	* numtheory.tcl: Updated version to 1.1.3
	* pkgIndex.tcl: Updated the version for math::decimal and math::numtheory
	* fourier.man: Updated the introduction as per ticket 2695827

2021-03-07  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* various man files: Require Tcl 8.6 and TclOO

2021-01-31  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* combinatoricsExt.tcl: Extension of the collection of combinatorial procedures
	* combinatoricsExt.test: Tests for the new procedures
	* combinatorics.man: Description of the new procedures
	* pkgIndex.tcl: Added the package math::combinatorics

2021-01-03  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* changepoint.tcl: New package defining two change point detection algorithms
	* changepoint.test: Basic tests for the change point detection algorithms
	* changepoint.man: Description of the change point detection procedures
	* pkgIndex.tcl: Added the changepoint package

2021-01-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* probopt.tcl: New package defining a number of probabilistic optimisation algorithms
	* probopt_*.tcl: Individual source files for these algorithms
	* probopt.test: Tests for the probabilistic algorithms
	* probopt.man: Description of the algorithms (including references describing the backgrounds)
	* filtergen.tcl: Correct a small mistake (loop over data)
	* filtergen.test: Correct tests (several small mistakes)

2020-12-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* filtergen.tcl: New package for digital filtering